--- a/src/sass/blocks/views/_read.scss
+++ b/src/sass/blocks/views/_read.scss
@@ -63,7 +63,7 @@
         display: block;
         color: $color-text-light;
         font-size: $font-size-small;
-        margin-bottom: 1em;
+        margin-bottom: 20px;
     }
 
     // Content components
