refactored woTouch directive into common woDirectives module

--- a/src/sass/base/_config.scss
+++ b/src/sass/base/_config.scss
@@ -38,6 +38,7 @@ $color-main-text:                   $color-white;
 $color-error:                       $color-red;
 $color-error-text:                  $color-white;
 $color-border-light:                $color-grey-lighter;
+$color-touch-active:                rgba(0, 0, 0, 0.1);
 
 // Breakpoints
 // -------------------------------------------
