fix in mail list desktop layout

--- a/src/sass/blocks/views/_mail-list.scss
+++ b/src/sass/blocks/views/_mail-list.scss
@@ -120,6 +120,9 @@
         & > header {
             display: none;
         }
+        &__search {
+            display: none;
+        }
         & > footer {
             display: none;
         }
