--- a/src/sass/views/_contacts.scss
+++ b/src/sass/views/_contacts.scss
@@ -67,8 +67,8 @@
             }
         }
 
-        // pull popover upwards to keep popup inside lightbox
-        .popover {
+        // pull tooltip upwards to keep popup inside lightbox
+        .tooltip {
             margin-top: -20px;
         }
     }
