--- a/src/sass/blocks/basics/_buttons.scss
+++ b/src/sass/blocks/basics/_buttons.scss
@@ -157,7 +157,9 @@
             }
         }
 
-        &.btn--active {
+
+        // special class if icon button is used as dropdown
+        &.wo-dropdown-active {
             background-color: $color-main;
             color: $color-main-text;
             & > svg {
@@ -189,9 +191,9 @@
 .btn-icon {
     position: relative;
     display: inline-block;
-    margin: 2px;
+    margin: 0;
     padding: 0;
-    box-shadow: 0 0 0 2px $color-main;
+    border: 2px solid $color-main;
     border-radius: 50%;
     vertical-align: middle;
     cursor: pointer;
@@ -202,18 +204,12 @@
     font-weight: normal;
     font-size: $font-size-base;
     background: transparent;
-    border: 0;
     line-height: 1;
-    height: 2.5em;
-    width: 2.5em;
+    height: 2.7em;
+    width: 2.7em;
     text-align: center;
     outline: none;
     -webkit-font-smoothing: antialiased;
-
-    @include respond-to(lg) {
-        transition: color 0.3s;
-        transform: translate3d(0,0,0); // to prevent flickering
-    }
 
     & > svg {
         width: 1.05em;
@@ -239,34 +235,17 @@
         transform: translateX(2px) translateY(2px);
     }
 
-    &:after {
-        pointer-events: none;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-        content: '';
-        box-sizing: content-box;
-        top: -2px;
-        left: -2px;
-        padding: 2px;
-        z-index: -1;
-        background: $color-main;
-        @include respond-to(lg) {
-            transition: transform 0.3s, opacity 0.4s;
-            transform: scale(1.2);
-        }
-        opacity: 0;
+    &:hover,
+    &:focus {
+        background-color: rgba($color-main, 0.1);
     }
-    @include respond-to(lg) {
-        &:hover {
-            svg {
-                fill: $color-white;
-            }
-            &:after {
-                transform: scale(0.8);
-                opacity: 1;
-            }
+
+    // special class if icon button is used as dropdown
+    &.wo-dropdown-active {
+        background-color: $color-main;
+        color: $color-main-text;
+        & > svg {
+            fill: $color-main-text;
         }
     }
 }
