--- a/src/sass/blocks/basics/_tooltip.scss
+++ b/src/sass/blocks/basics/_tooltip.scss
@@ -4,7 +4,7 @@
     left: -9999px;
     display: block;
     z-index: 9000;
-    max-width: 276px;
+    max-width: 276px; // choosen arbitrarily
     padding: 1px;
     text-align: left;
     font-size: $font-size-small;
