Fix text line height in attachment box

--- a/src/sass/blocks/basics/_attachments.scss
+++ b/src/sass/blocks/basics/_attachments.scss
@@ -14,7 +14,7 @@
     & > li {
         display: inline-block;
         height: $li-height;
-        line-height: $li-height;
+        line-height: $li-height - 1px;
         border-radius: 0.5 * ($li-height);
         vertical-align: middle;
         margin-left: $padding;
