--- a/src/sass/blocks/views/_write.scss
+++ b/src/sass/blocks/views/_write.scss
@@ -14,13 +14,17 @@
         flex-shrink: 0;
         margin-bottom: 1em;
 
+        .mail-addresses {
+            margin-bottom: 0.5em;
+        }
+
         & > .attachments {
             margin-top: 0.5em;
         }
     }
     &__subject {
         position: relative;
-        margin-top: 1em;
+        margin-top: 1.3em;
 
         input[type=file] {
             position: absolute;
