replace non semantic color variable in mail list

--- a/src/sass/blocks/views/_mail-list.scss
+++ b/src/sass/blocks/views/_mail-list.scss
@@ -29,7 +29,7 @@
                 @include scut-truncate;
                 padding-top: 4px; // depends on height of .btn-navicon
                 padding-right: 50px; // depends on with of .btn-icon
-                color: $color-grey-dark;
+                color: $color-text;
                 font-size: $font-size-bigger;
                 font-weight: normal;
             }
