Optimized mobile read view

--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -45,6 +45,7 @@
 @import "blocks/basics/attachments";
 @import "blocks/basics/tooltip";
 @import "blocks/basics/dropdown";
+@import "blocks/basics/toolbar";
 @import "blocks/layout/app";
 @import "blocks/layout/nav";
 @import "blocks/layout/action-bar";
