added dropdowns for mobile toolbar
Conflicts:
	src/js/directives/common.js

--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -16,7 +16,7 @@
 
 // Utilities classes
 
-@import "mixins/responsive";
+@import "utilities/responsive";
 
 // Components (TODO: refactor to BEM)
 @import "components/lightbox";
