--- a/src/sass/blocks/basics/_dropdown.scss
+++ b/src/sass/blocks/basics/_dropdown.scss
@@ -10,7 +10,7 @@
     background: $color-bg;
     color: $color-main;
     border: 1px solid $color-main;
-    margin: 2px 0 0;
+    margin: 0;
     padding: 0;
     list-style: none;
     will-change: opacity, transform;
