--- a/src/sass/utilities/_responsive.scss
+++ b/src/sass/utilities/_responsive.scss
@@ -2,35 +2,35 @@
 
 .u-visible-sm {
     @include respond-to(md) {
-        display: none;
+        display: none !important;
     }
 }
 .u-visible-md {
     @include respond-to(sm-only) {
-        display: none;
+        display: none !important;
     }
     @include respond-to(lg) {
-        display: none;
+        display: none !important;
     }
 }
 .u-visible-lg {
     @include respond-to(not-lg) {
-        display: none;
+        display: none !important;
     }
 }
 
 .u-hidden-sm {
     @include respond-to(sm-only) {
-        display: none;
+        display: none !important;
     }
 }
 .u-hidden-md {
     @include respond-to(md-only) {
-        display: none;
+        display: none !important;
     }
 }
 .u-hidden-lg {
     @include respond-to(lg) {
-        display: none;
+        display: none !important;
     }
 }
